src/main/java/ca/ucalgary/ensf609/sample/app/errors/ResourceNotFoundException.java
package ca.ucalgary.ensf609.sample.app.errors;

class ResourceNotFoundException extends ApplicationException {

    ResourceNotFoundException(int code, String message) {
        super(code, message);
    }
}
